force-app/main/default/objects/Affiliated_Account__c/Affiliated_Account__c.object-meta.xml
<CustomObject>
    <label>Affiliated Account</label>
    <nameField>
        <displayFormat>af-{00000}</displayFormat>
        <label>Affiliated Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliated Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>