force-app/main/default/objects/Affiliated_Account__c/fields/Affiliation_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Name__c</fullName>
    <formula>Contact__r.LastName&amp;&quot;-&quot;&amp;Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affiliation Name</label>
    <type>Text</type>
</CustomField>