force-app/main/default/objects/Affiliated_Account__c/fields/Key_On_Account_And_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_On_Account_And_Contact__c</fullName>
    <caseSensitive>true</caseSensitive>
    <defaultValue>&#39;Will be set by workflow&#39;</defaultValue>
    <externalId>true</externalId>
    <label>Key On Account And Contact</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>